src/style.css
body {
  margin: 0;
  padding-block: 1em;
  padding-inline: 2em;
  display: flex;
  flex-wrap: wrap;
  gap: 2em;
}

#form {
  width: 16em;
  display: flex;
  flex-direction: column;
  gap: .5em;
}

#form .invalid-feedback {
  display: none;
  font-style: italic;
  font-size: .9rem;
}

#form :invalid~.invalid-feedback {
  display: initial;
}

#solution {
  padding: 0;
  list-style-type: none;
}

#solution>li:not(:last-child) {
  margin-bottom: 1em;
}

#solution h4 {
  margin: 0;
  margin-bottom: .5em;
}

